53522/Proyecto/generated/TableroParser.js
// Generated from tablero.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import tableroListener from './tableroListener.js';
import tableroVisitor from './tableroVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class tableroParser extends antlr4.Parser {

    static grammarFileName = "tablero.g4";
    static literalNames = [ null, "'tablero'", "'fuente'", "'tipo'", "'ruta'", 
                            "'metrica'", "'grafico'", "'usar'", "'filtro'", 
                            "'alerta'", "'si'", "'entonces'", "'verdadero'", 
                            "'falso'", "'csv'", "'api'", "'json'", "'suma'", 
                            "'promedio'", "'maximo'", "'minimo'", "'contar'", 
                            "'barras'", "'lineas'", "'torta'", "'tabla'", 
                            null, "'{'", "'}'", "'('", "')'", "';'", "':'", 
                            "'/'", "'='", "','", "'_'", "'-'", "'.'", "'=='", 
                            "'!='", "'>'", "'<'", "'>='", "'<='" ];
    static symbolicNames = [ null, "TABLERO", "FUENTE", "TIPO", "RUTA", 
                             "METRICA", "GRAFICO", "USAR", "FILTRO", "ALERTA", 
                             "SI", "ENTONCES", "VERDADERO", "FALSO", "CSV", 
                             "API", "JSON", "SUMA", "PROMEDIO", "MAXIMO", 
                             "MINIMO", "CONTAR", "BARRAS", "LINEAS", "TORTA", 
                             "TABLA", "CADENA", "LBRACE", "RBRACE", "LPAREN", 
                             "RPAREN", "SEMICOLON", "COLON", "SLASH", "EQ", 
                             "COMMA", "UNDERSCORE", "GUION", "DOT", "DOUBLE_EQ", 
                             "EXCLAM_EQ", "MAYOR", "MENOR", "MAYOR_EQ", 
                             "MENOR_EQ", "LETRA", "DIGITO", "WS" ];
    static ruleNames = [ "programa", "elemento", "fuente", "tipo_fuente", 
                         "metrica", "agregacion", "grafico", "tipo_grafico", 
                         "filtro", "operador", "alerta", "campo", "valor", 
                         "booleano", "identificador", "cadena", "numero" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = tableroParser.ruleNames;
        this.literalNames = tableroParser.literalNames;
        this.symbolicNames = tableroParser.symbolicNames;
    }



	programa() {
	    let localctx = new ProgramaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, tableroParser.RULE_programa);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 34;
	        this.match(tableroParser.TABLERO);
	        this.state = 35;
	        this.identificador();
	        this.state = 36;
	        this.match(tableroParser.LBRACE);
	        this.state = 40;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 868) !== 0)) {
	            this.state = 37;
	            this.elemento();
	            this.state = 42;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 43;
	        this.match(tableroParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	elemento() {
	    let localctx = new ElementoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, tableroParser.RULE_elemento);
	    try {
	        this.state = 50;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 45;
	            this.fuente();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 46;
	            this.metrica();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 47;
	            this.grafico();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 48;
	            this.filtro();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 49;
	            this.alerta();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fuente() {
	    let localctx = new FuenteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, tableroParser.RULE_fuente);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.match(tableroParser.FUENTE);
	        this.state = 53;
	        this.identificador();
	        this.state = 54;
	        this.match(tableroParser.TIPO);
	        this.state = 55;
	        this.tipo_fuente();
	        this.state = 56;
	        this.match(tableroParser.RUTA);
	        this.state = 57;
	        this.cadena();
	        this.state = 58;
	        this.match(tableroParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tipo_fuente() {
	    let localctx = new Tipo_fuenteContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, tableroParser.RULE_tipo_fuente);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 60;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 114688) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	metrica() {
	    let localctx = new MetricaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, tableroParser.RULE_metrica);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 62;
	        this.match(tableroParser.METRICA);
	        this.state = 63;
	        this.identificador();
	        this.state = 64;
	        this.match(tableroParser.EQ);
	        this.state = 65;
	        this.agregacion();
	        this.state = 66;
	        this.match(tableroParser.LPAREN);
	        this.state = 67;
	        this.campo();
	        this.state = 68;
	        this.match(tableroParser.RPAREN);
	        this.state = 69;
	        this.match(tableroParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	agregacion() {
	    let localctx = new AgregacionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, tableroParser.RULE_agregacion);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 71;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 4063232) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	grafico() {
	    let localctx = new GraficoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, tableroParser.RULE_grafico);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this.match(tableroParser.GRAFICO);
	        this.state = 74;
	        this.identificador();
	        this.state = 75;
	        this.match(tableroParser.LBRACE);
	        this.state = 76;
	        this.match(tableroParser.TIPO);
	        this.state = 77;
	        this.match(tableroParser.EQ);
	        this.state = 78;
	        this.tipo_grafico();
	        this.state = 79;
	        this.match(tableroParser.SEMICOLON);
	        this.state = 80;
	        this.match(tableroParser.USAR);
	        this.state = 81;
	        this.match(tableroParser.EQ);
	        this.state = 82;
	        this.identificador();
	        this.state = 83;
	        this.match(tableroParser.SEMICOLON);
	        this.state = 84;
	        this.match(tableroParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	tipo_grafico() {
	    let localctx = new Tipo_graficoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, tableroParser.RULE_tipo_grafico);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 86;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 62914560) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	filtro() {
	    let localctx = new FiltroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, tableroParser.RULE_filtro);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 88;
	        this.match(tableroParser.FILTRO);
	        this.state = 89;
	        this.campo();
	        this.state = 90;
	        this.operador();
	        this.state = 91;
	        this.valor();
	        this.state = 92;
	        this.match(tableroParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	operador() {
	    let localctx = new OperadorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, tableroParser.RULE_operador);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        _la = this._input.LA(1);
	        if(!(((((_la - 39)) & ~0x1f) === 0 && ((1 << (_la - 39)) & 63) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	alerta() {
	    let localctx = new AlertaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, tableroParser.RULE_alerta);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 96;
	        this.match(tableroParser.ALERTA);
	        this.state = 97;
	        this.match(tableroParser.SI);
	        this.state = 98;
	        this.identificador();
	        this.state = 99;
	        this.operador();
	        this.state = 100;
	        this.valor();
	        this.state = 101;
	        this.match(tableroParser.ENTONCES);
	        this.state = 102;
	        this.cadena();
	        this.state = 103;
	        this.match(tableroParser.SEMICOLON);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	campo() {
	    let localctx = new CampoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, tableroParser.RULE_campo);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.identificador();
	        this.state = 110;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===38) {
	            this.state = 106;
	            this.match(tableroParser.DOT);
	            this.state = 107;
	            this.identificador();
	            this.state = 112;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	valor() {
	    let localctx = new ValorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, tableroParser.RULE_valor);
	    try {
	        this.state = 116;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 26:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 113;
	            this.cadena();
	            break;
	        case 46:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 114;
	            this.numero();
	            break;
	        case 12:
	        case 13:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 115;
	            this.booleano();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	booleano() {
	    let localctx = new BooleanoContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, tableroParser.RULE_booleano);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 118;
	        _la = this._input.LA(1);
	        if(!(_la===12 || _la===13)) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identificador() {
	    let localctx = new IdentificadorContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, tableroParser.RULE_identificador);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 120;
	        this.match(tableroParser.LETRA);
	        this.state = 124;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(((((_la - 36)) & ~0x1f) === 0 && ((1 << (_la - 36)) & 1537) !== 0)) {
	            this.state = 121;
	            _la = this._input.LA(1);
	            if(!(((((_la - 36)) & ~0x1f) === 0 && ((1 << (_la - 36)) & 1537) !== 0))) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 126;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cadena() {
	    let localctx = new CadenaContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, tableroParser.RULE_cadena);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 127;
	        this.match(tableroParser.CADENA);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	numero() {
	    let localctx = new NumeroContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, tableroParser.RULE_numero);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 130; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 129;
	            this.match(tableroParser.DIGITO);
	            this.state = 132; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===46);
	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===38) {
	            this.state = 134;
	            this.match(tableroParser.DOT);
	            this.state = 136; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 135;
	                this.match(tableroParser.DIGITO);
	                this.state = 138; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===46);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

tableroParser.EOF = antlr4.Token.EOF;
tableroParser.TABLERO = 1;
tableroParser.FUENTE = 2;
tableroParser.TIPO = 3;
tableroParser.RUTA = 4;
tableroParser.METRICA = 5;
tableroParser.GRAFICO = 6;
tableroParser.USAR = 7;
tableroParser.FILTRO = 8;
tableroParser.ALERTA = 9;
tableroParser.SI = 10;
tableroParser.ENTONCES = 11;
tableroParser.VERDADERO = 12;
tableroParser.FALSO = 13;
tableroParser.CSV = 14;
tableroParser.API = 15;
tableroParser.JSON = 16;
tableroParser.SUMA = 17;
tableroParser.PROMEDIO = 18;
tableroParser.MAXIMO = 19;
tableroParser.MINIMO = 20;
tableroParser.CONTAR = 21;
tableroParser.BARRAS = 22;
tableroParser.LINEAS = 23;
tableroParser.TORTA = 24;
tableroParser.TABLA = 25;
tableroParser.CADENA = 26;
tableroParser.LBRACE = 27;
tableroParser.RBRACE = 28;
tableroParser.LPAREN = 29;
tableroParser.RPAREN = 30;
tableroParser.SEMICOLON = 31;
tableroParser.COLON = 32;
tableroParser.SLASH = 33;
tableroParser.EQ = 34;
tableroParser.COMMA = 35;
tableroParser.UNDERSCORE = 36;
tableroParser.GUION = 37;
tableroParser.DOT = 38;
tableroParser.DOUBLE_EQ = 39;
tableroParser.EXCLAM_EQ = 40;
tableroParser.MAYOR = 41;
tableroParser.MENOR = 42;
tableroParser.MAYOR_EQ = 43;
tableroParser.MENOR_EQ = 44;
tableroParser.LETRA = 45;
tableroParser.DIGITO = 46;
tableroParser.WS = 47;

tableroParser.RULE_programa = 0;
tableroParser.RULE_elemento = 1;
tableroParser.RULE_fuente = 2;
tableroParser.RULE_tipo_fuente = 3;
tableroParser.RULE_metrica = 4;
tableroParser.RULE_agregacion = 5;
tableroParser.RULE_grafico = 6;
tableroParser.RULE_tipo_grafico = 7;
tableroParser.RULE_filtro = 8;
tableroParser.RULE_operador = 9;
tableroParser.RULE_alerta = 10;
tableroParser.RULE_campo = 11;
tableroParser.RULE_valor = 12;
tableroParser.RULE_booleano = 13;
tableroParser.RULE_identificador = 14;
tableroParser.RULE_cadena = 15;
tableroParser.RULE_numero = 16;

class ProgramaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_programa;
    }

	TABLERO() {
	    return this.getToken(tableroParser.TABLERO, 0);
	};

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	LBRACE() {
	    return this.getToken(tableroParser.LBRACE, 0);
	};

	RBRACE() {
	    return this.getToken(tableroParser.RBRACE, 0);
	};

	elemento = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ElementoContext);
	    } else {
	        return this.getTypedRuleContext(ElementoContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterPrograma(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitPrograma(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitPrograma(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class ElementoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_elemento;
    }

	fuente() {
	    return this.getTypedRuleContext(FuenteContext,0);
	};

	metrica() {
	    return this.getTypedRuleContext(MetricaContext,0);
	};

	grafico() {
	    return this.getTypedRuleContext(GraficoContext,0);
	};

	filtro() {
	    return this.getTypedRuleContext(FiltroContext,0);
	};

	alerta() {
	    return this.getTypedRuleContext(AlertaContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterElemento(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitElemento(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitElemento(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class FuenteContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_fuente;
    }

	FUENTE() {
	    return this.getToken(tableroParser.FUENTE, 0);
	};

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	TIPO() {
	    return this.getToken(tableroParser.TIPO, 0);
	};

	tipo_fuente() {
	    return this.getTypedRuleContext(Tipo_fuenteContext,0);
	};

	RUTA() {
	    return this.getToken(tableroParser.RUTA, 0);
	};

	cadena() {
	    return this.getTypedRuleContext(CadenaContext,0);
	};

	SEMICOLON() {
	    return this.getToken(tableroParser.SEMICOLON, 0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterFuente(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitFuente(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitFuente(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class Tipo_fuenteContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_tipo_fuente;
    }

	CSV() {
	    return this.getToken(tableroParser.CSV, 0);
	};

	API() {
	    return this.getToken(tableroParser.API, 0);
	};

	JSON() {
	    return this.getToken(tableroParser.JSON, 0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterTipo_fuente(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitTipo_fuente(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitTipo_fuente(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class MetricaContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_metrica;
    }

	METRICA() {
	    return this.getToken(tableroParser.METRICA, 0);
	};

	identificador() {
	    return this.getTypedRuleContext(IdentificadorContext,0);
	};

	EQ() {
	    return this.getToken(tableroParser.EQ, 0);
	};

	agregacion() {
	    return this.getTypedRuleContext(AgregacionContext,0);
	};

	LPAREN() {
	    return this.getToken(tableroParser.LPAREN, 0);
	};

	campo() {
	    return this.getTypedRuleContext(CampoContext,0);
	};

	RPAREN() {
	    return this.getToken(tableroParser.RPAREN, 0);
	};

	SEMICOLON() {
	    return this.getToken(tableroParser.SEMICOLON, 0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterMetrica(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitMetrica(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitMetrica(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class AgregacionContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_agregacion;
    }

	SUMA() {
	    return this.getToken(tableroParser.SUMA, 0);
	};

	PROMEDIO() {
	    return this.getToken(tableroParser.PROMEDIO, 0);
	};

	MAXIMO() {
	    return this.getToken(tableroParser.MAXIMO, 0);
	};

	MINIMO() {
	    return this.getToken(tableroParser.MINIMO, 0);
	};

	CONTAR() {
	    return this.getToken(tableroParser.CONTAR, 0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.enterAgregacion(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof tableroListener ) {
	        listener.exitAgregacion(this);
		}
	}

	accept(visitor) {
	    if ( visitor instanceof tableroVisitor ) {
	        return visitor.visitAgregacion(this);
	    } else {
	        return visitor.visitChildren(this);
	    }
	}


}



class GraficoContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = tableroParser.RULE_grafico;
    }

	GRAFICO() {
	    return this.getToken(tableroParser.GRAFICO, 0);
	};

	identificador = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(IdentificadorContext);
	    } else {
	        return this.getTypedRuleContext(IdentificadorContext,i);
	    }
	};

	LBRACE() {
	    return this.getToken(tableroParser.LBRACE, 0);
	};

	TIPO() {
	    return this.getToken(tableroParser.TIPO, 0);
	};

	EQ = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(tableroParser.EQ);
	    } else {
	        return this.getToken(tableroParser.EQ, i);
	    }
	};


	tipo_grafico() {
	    return this.getTypedRuleContext(Tipo_graficoContext,0);
	};

	SEMICOLON = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(tableroParser.SEMICOLON);
	    } else {
	        return this.getToken(tableroParser.SEMICOLON, i);
	    }
	};


	USAR() {
	    return this.getToken(tableroParser.USAR, 0);
	};

	RBRACE() {
	    return this.getToken(tableroParser.RBRACE, 0);
	};

	enterRule(listener) {
	    if(listener instanceof tableroListener ) {
